# kingdom-royale-maid

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  kingdom-royale-maid.service  sqlx-data.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: armv7.yml  ci.yml  clippy.yml
migrations/: 20210127090759_create_database.sql  20210210063006_hello_world.sql  20210210173631_hello_world.sql  20210217075351_hello_world.sql
res/: README.md
src/: bot.rs  data.rs  hooks.rs  main.rs  resources.rs  version_data.rs
src/commands/: delete_category.rs  help.rs  meta.rs  mod.rs  random.rs  shutdown.rs  stats.rs  tos.rs
src/commands/game/: checks.rs  end_game.rs  end_gathering.rs  flavour.rs  forceadd.rs  game_info.rs  give_item.rs  info.rs  inventory.rs  join.rs  leave.rs  macros.rs  mod.rs  new_game.rs  next_block.rs  notes.rs  roles.rs  rules.rs  secret_meeting_log.rs  stab.rs  start.rs  start_gathering.rs  substitute.rs
src/commands/test_cmds/: confirm_murder.rs  mod.rs  six_choice_embed.rs
src/game/: data.rs  db.rs  game.rs  item.rs  mod.rs  player.rs  role.rs  tasks.rs
src/game/db/: mod.rs
src/game/db/types/: game.rs  mod.rs
src/game/fsm/: ablock.rs  bblock.rs  cblock.rs  dblock.rs  eblock.rs  fblock.rs  gameended.rs  macros.rs  mod.rs  notstarted.rs
src/game/fsm/cblock/: tasks.rs
src/game/roles/: double.rs  king.rs  knight.rs  mod.rs  prince.rs  revolutionary.rs  role.rs  sorcerer.rs
src/helpers/: choose_target.rs  confirm_murder.rs  mod.rs  perms.rs  react.rs  serenity_ext.rs
