[package]
name = "kingdom-royale-maid"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
build   = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deterministic = []

[dependencies]
tokio = { version = "0.2", features = ["macros", "signal", "blocking"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

itertools = "0.10"
once_cell = "1.5"
rand = "0.8"
typemap_rev = "0.1"

rust-embed = { version = "5.7.0", features = ["debug-embed", "interpolate-folder-path"] }
serde_json = "1.0"
serde = "1.0.118"

dotenv = "0.15"
image = "0.23"
libwebp-image = "0.1"

chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
humansize = "1.1"
procfs = "0.9"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "0.9"
features = ["collector"]

[dependencies.reqwest]
version = "0.10"
default_features = false
features = ["rustls-tls"]

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = "1.0.118"
