[package]
name    = "kingdom-royale-maid"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
build   = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deterministic = []

[dependencies]
tokio = { version = "1.2.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "0.3.12"

tracing = "0.1.23"
tracing-subscriber = "0.2.16"

once_cell = "1.5.2"
rand = "0.8.3"
typemap_rev = "0.1.4"

rust-embed = { version = "5.9.0", features = ["debug-embed", "interpolate-folder-path"] }
serde_json = "1.0.62"
serde = "1.0.123"

dotenv = "0.15.0"
image = "0.23.13"
libwebp-image = "0.2.0"

chrono = "0.4.19"

[target.'cfg(target_os = "linux")'.dependencies]
humansize = "1.1.0"
procfs = "0.9.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "0.9"
features = ["collector"]

[dependencies.reqwest]
version = "0.11.1"
default_features = false
features = ["rustls-tls"]

[build-dependencies]
chrono = "0.4.19"
serde_json = "1.0.62"
serde = "1.0.123"
