[package]
name    = "kingdom-royale-maid"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
build   = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deterministic = []

[dependencies]
tokio = { version = "1.5.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "0.3.14"

tracing = "0.1.26"
tracing-subscriber = "0.2.18"

once_cell = "1.7.2"
rand = "0.8.3"
typemap_rev = "0.1.5"

rust-embed = { version = "5.9.0", features = ["debug-embed", "interpolate-folder-path"] }
serde_json = "1.0.64"
serde = "1.0.126"

dotenv = "0.15.0"
image = "0.23.14"
libwebp-image = "0.2.0"

chrono = "0.4.19"

[target.'cfg(target_os = "linux")'.dependencies]
humansize = "1.1.0"
procfs = "0.9.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "0.9"
features = ["collector"]

[dependencies.reqwest]
version = "0.11.3"
default_features = false
features = ["rustls-tls"]

[build-dependencies]
chrono = "0.4.19"
serde_json = "1.0.64"
serde = "1.0.126"
